# IDA

./: .gitignore  HAL_Architecture_Documentation.md  build-requirements.in  build-requirements.txt  configure_system.py  configure_system_initial.py  decompile.ipynb  log.txt  main.py  myguilab.py  old_setup.sh  probe347.spec  requirements.txt  setup.ps1  setup.sh
Alignment NIR/: Alignment.pkl  alignment_gui.py  area_sweep.py
Camera/: camera.pkl  camera.py
Decompiled/: LDC502.py  camera_gui.py  camera_init.py  coordinates.py  files_gui.py  laser.py  main_gui.py  micronix_stage_zf.py  plot_gui.py  run_gui.py  script_gui.py  selection_gui.py  serial_communication.py  stage.py  stage_gui.py  stage_setup.py  terminal_gui.py  zero_xyz.py
File Import/: devices_to_measure.pkl  transformed_backup.json
GUI/: camera_gui.py  command_code  command_gui.py  common_struct.py  init_gui.py  lab_coordinates.py  lab_gui.py  lab_tsp.py  lib_coordinates.py  lib_gui.py  lib_tsp.py  log.txt  main_devices_gui.py  main_instruments_gui.py  main_registration_gui.py  main_start_gui.py  main_testing_gui.py  mainframe_command_gui.py  mainframe_configuration_gui.py  mainframe_sensor_control_gui.py  mainframe_stage_control_gui.py  mainframe_tec_control_gui.py  mm.py  requirements.txt  runner.py  sub_add_btn_gui.py  sub_area_scan_setting_gui.py  sub_connect_config_gui.py  sub_data_window_setting_gui.py  sub_fine_align_setting_gui.py  sub_laser_sweep_setting_gui.py  sub_limit_setting_gui.py  test.py  test2.py  testmove.py
NIR/hal/: CMakeLists.txt  nir_cpp.h  nir_factory.py  nir_hal.py
(+308 files in other folders)
